--- a/.github/workflows/sitebuild.yml
+++ b/.github/workflows/sitebuild.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build VitePress docs
         run: |
           npm run docs:build
-          mv ./docs/.vitepress/dist ./dist/docs
+          mv ./docs/.vitepress/dist ./dist
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifacts (VitePress docs)
