--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   frontend:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:80"
     environment:
@@ -18,6 +19,7 @@ services:
   backend:
     build:
       context: ./backend
+      dockerfile: Dockerfile.flask
     ports:
       - "5000:5000"
     environment:
@@ -28,18 +30,15 @@ services:
       - ./backend:/app
       - data:/app/data
     command: ["gunicorn", "-w", "4", "-b", "0.0.0.0:5000", "src.app:app"]
-    depends_on:
-      - metadata_updater
 
 
   metadata_updater:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.cron
     volumes:
       - ./backend:/app
       - data:/app/data
-    command: ["python", "src/update_metadata.py"]
 
 volumes:
   data:
